--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 .App {
+  /* Set global font to Roboto */
+  font-family: 'Roboto', sans-serif;
   background-color: white;
   min-height: 100vh;
   display: flex;
