Add header and message enter

--- a/src/components/chatapp.css
+++ b/src/components/chatapp.css
@@ -1,6 +1,13 @@
 .chat-container {
     margin:0;
     padding:0;
+    padding-top: 60px;
+}
+
+@media (max-width: 979px) {
+    .chat-container {
+        padding-top: 0;
+    }
 }
 
 .chatbar {
