--- a/src/components/chat/chatwindow.css
+++ b/src/components/chat/chatwindow.css
@@ -11,6 +11,8 @@
     overflow-y: auto;
     overflow-x: hidden;
     min-height:0;
+    display:flex;
+    flex-direction: column-reverse;
 }
 
 /* Message input bar */
