--- a/src/components/chat/message.css
+++ b/src/components/chat/message.css
@@ -15,3 +15,11 @@
     height: 40px;
     border-radius: 50%;
 }
+
+.sender-message {
+    padding-left: 12rem;
+}
+
+.receiver-message {
+    padding-right: 12rem;
+}
